docs: optimize README.md
Co-authored-by: Xun Zhang <>